--- a/src/Services/Inventory/Inventory.API/appsettings.json
+++ b/src/Services/Inventory/Inventory.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "InventoryConnectionString": "Host=inventory-db;Port=5432;Database=MicroECommerce_InventoryDb;Username=admin;Password=Password123!;"
+  },
+  "RabbitMQ": {
+    "Host": "rabbitmq",
+    "UserName": "guest",
+    "Password": "guest"
+  }
 }
