Add token cleanup service, session limit, email token expiry
Introduce ExpiredTokenCleanupService to periodically remove expired/revoked refresh tokens, configurable via appsettings.json. Enforce max active sessions per user in login flow; revoke oldest session if limit exceeded. Add email confirmation token expiration checks and schema field. Update configuration for new DB user, session/security settings, and cleanup intervals. Improve logging for authentication and maintenance processes.

--- a/src/Services/Identity/Identity.API/appsettings.json
+++ b/src/Services/Identity/Identity.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_IdentityDb;Username=postgres;Password=YOUR_PASSWORD_HERE;"
+    "IdentityConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_IdentityDb;Username=admin;Password=Password123!;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
@@ -48,5 +48,12 @@
     "EnableSsl": false,
     "TemplateFolder": "Templates/EmailTemplates",
     "SendEmailInDevelopment": true
+  },
+  "SecuritySettings": {
+    "MaxActiveSessions": 5
+  },
+  "TokenCleanup": {
+    "IntervalHours": 6,
+    "RetentionDays": 30
   }
 }
