--- a/src/Services/Identity/Identity.API/appsettings.json
+++ b/src/Services/Identity/Identity.API/appsettings.json
@@ -36,7 +36,7 @@
     "Issuer": "microecommerce.com",
     "AccessTokenExpiration": 15,
     "RefreshTokenExpiration": 10080,
-    "SecurityKey": "REPLACE_WITH_USER_SECRET_OR_ENV_VAR_MIN_32_CHARS"
+    "SecurityKey": "Bu_Cok_Uzun_Ve_Guvenli_Rastgele_Bir_Anahtar_Olmali_En_Az_64_Karakter_Uzunlugunda_1234567890!@#$%"
   },
   "EmailOptions": {
     "SmtpServer": "smtp.example.com",
