Enhance gateway, saga reliability, and cross-cutting concerns
- Add JWT auth, CORS, and CorrelationId middleware to API Gateway
- Refactor YARP routes and health checks; use env vars for config
- Add ReleaseStockConsumer to Inventory for stock compensation
- Refactor Order saga to reliably release stock on failure/timeout
- Move ReleaseStockCommand to shared integration events
- Standardize logging (Serilog/Seq) and config across services
- Add .env.example for environment variable documentation
- Remove hardcoded secrets and improve code organization

--- a/src/ApiGateway/ApiGateway/ApiGateway.csproj
+++ b/src/ApiGateway/ApiGateway/ApiGateway.csproj
@@ -27,6 +27,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
 		<ProjectReference Include="..\..\BuildingBlocks\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
+		<ProjectReference Include="..\..\BuildingBlocks\BuildingBlocks.CrossCutting\BuildingBlocks.CrossCutting.csproj" />
 	</ItemGroup>
 
 </Project>
