--- a/src/ApiGateway/ApiGateway/appsettings.json
+++ b/src/ApiGateway/ApiGateway/appsettings.json
@@ -1,39 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Yarp": "Information"
-    }
+  "TokenOptions": {
+    "Audience": "MicroECommerceUsers",
+    "Issuer": "MicroECommerce",
+    "AccessTokenExpiration": 60,
+    "RefreshTokenExpiration": 1440,
+    "SecurityKey": "REPLACED_BY_ENVIRONMENT_VARIABLE"
   },
-
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
-        }
-      }
-    ]
+  "Seq": {
+    "ServerUrl": "REPLACED_BY_ENVIRONMENT_VARIABLE"
   },
-
   "ReverseProxy": {
     "Routes": {
       "identity-route": {
         "ClusterId": "identity-cluster",
         "Match": {
-          "Path": "/identity/{**catch-all}"
+          "Path": "/api/identity/{**catch-all}"
         },
         "Transforms": [
           {
@@ -44,30 +25,55 @@
       "catalog-route": {
         "ClusterId": "catalog-cluster",
         "Match": {
-          "Path": "/catalog/{**catch-all}"
+          "Path": "/api/catalog/{**catch-all}"
         },
         "Transforms": [
           {
             "PathPattern": "/api/{**catch-all}"
           }
         ],
-        "RateLimiterPolicy": "fixed-window"
+        "AuthorizationPolicy": "default"
       },
-      "order-route": {
-        "ClusterId": "order-cluster",
+      "basket-route": {
+        "ClusterId": "basket-cluster",
         "Match": {
-          "Path": "/order/{**catch-all}"
+          "Path": "/api/basket/{**catch-all}"
         },
         "Transforms": [
           {
             "PathPattern": "/api/{**catch-all}"
           }
-        ]
+        ],
+        "AuthorizationPolicy": "default"
       },
-      "identity-health": {
-        "ClusterId": "identity-cluster",
+      "order-route": {
+        "ClusterId": "order-cluster",
         "Match": {
-          "Path": "/health/identity"
+          "Path": "/api/order/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/api/{**catch-all}"
+          }
+        ],
+        "AuthorizationPolicy": "default"
+      },
+      "inventory-route": {
+        "ClusterId": "inventory-cluster",
+        "Match": {
+          "Path": "/api/inventory/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/api/{**catch-all}"
+          }
+        ],
+        "AuthorizationPolicy": "default"
+      },
+      "catalog-health": {
+        "ClusterId": "catalog-cluster",
+        "Match": {
+          "Path": "/health/catalog"
         },
         "Transforms": [
           {
@@ -75,10 +81,10 @@
           }
         ]
       },
-      "catalog-health": {
-        "ClusterId": "catalog-cluster",
+      "basket-health": {
+        "ClusterId": "basket-cluster",
         "Match": {
-          "Path": "/health/catalog"
+          "Path": "/health/basket"
         },
         "Transforms": [
           {
@@ -101,8 +107,15 @@
     "Clusters": {
       "identity-cluster": {
         "Destinations": {
-          "identity-destination-1": {
-            "Address": "http://identity-api:80"
+          "destination1": {
+            "Address": "http://identity-api"
+          }
+        }
+      },
+      "catalog-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://catalog-api"
           }
         },
         "HealthCheck": {
@@ -115,10 +128,10 @@
           }
         }
       },
-      "catalog-cluster": {
+      "basket-cluster": {
         "Destinations": {
-          "catalog-destination-1": {
-            "Address": "http://catalog-api:80"
+          "destination1": {
+            "Address": "http://basket-api"
           }
         },
         "HealthCheck": {
@@ -133,8 +146,8 @@
       },
       "order-cluster": {
         "Destinations": {
-          "order-destination-1": {
-            "Address": "http://order-api:80"
+          "destination1": {
+            "Address": "http://order-api"
           }
         },
         "HealthCheck": {
@@ -146,9 +159,41 @@
             "Path": "/health"
           }
         }
+      },
+      "inventory-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://inventory-api"
+          }
+        }
       }
     }
   },
-
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Yarp": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  },
   "AllowedHosts": "*"
 }
