--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,15 +1,42 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "BasketConnectionString": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "Redis": {
+    "ConnectionString": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "RabbitMQ": {
+    "Host": "REPLACED_BY_ENVIRONMENT_VARIABLE",
+    "Username": "REPLACED_BY_ENVIRONMENT_VARIABLE",
+    "Password": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "Seq": {
+    "ServerUrl": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
   },
-  "AllowedHosts": "*",
-  "CacheSettings": {
-    "ConnectionString": "basketdb:6379"
-  },
-  "RabbitMQSettings": {
-    "Host": "rabbitmq"
-  }
+  "AllowedHosts": "*"
 }
