--- a/src/Services/Order/Order.API/appsettings.json
+++ b/src/Services/Order/Order.API/appsettings.json
@@ -1,18 +1,39 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OrderConnectionString": "Server=order-db;Port=5432;Database=OrderDb;User Id=postgres;Password=postgres;"
+    "OrderConnectionString": "REPLACED_BY_ENVIRONMENT_VARIABLE"
   },
-  "RabbitMq": {
-    "Host": "rabbitmq",
-    "Port": "5672",
-    "UserName": "guest",
-    "Password": "guest"
-  }
+  "RabbitMQ": {
+    "Host": "REPLACED_BY_ENVIRONMENT_VARIABLE",
+    "Username": "REPLACED_BY_ENVIRONMENT_VARIABLE",
+    "Password": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "Seq": {
+    "ServerUrl": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  },
+  "AllowedHosts": "*"
 }
