--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,16 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CatalogConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_CatalogDb;Username=postgres;Password=YOUR_PASSWORD_HERE;"
+    "CatalogConnectionString": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "RabbitMQ": {
+    "Host": "REPLACED_BY_ENVIRONMENT_VARIABLE",
+    "Username": "REPLACED_BY_ENVIRONMENT_VARIABLE",
+    "Password": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "Seq": {
+    "ServerUrl": "REPLACED_BY_ENVIRONMENT_VARIABLE"
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -19,16 +19,21 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "Seq",
-        "Args": { "serverUrl": "http://localhost:5341" }
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName" ],
-    "Properties": {
-      "Application": "MicroECommerce.Catalog",
-      "Environment": "Development"
-    }
-  }
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  },
+  "AllowedHosts": "*"
 }
