--- a/src/Services/Inventory/Inventory.API/appsettings.json
+++ b/src/Services/Inventory/Inventory.API/appsettings.json
@@ -1,17 +1,39 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "InventoryConnectionString": "Host=inventory-db;Port=5432;Database=MicroECommerce_InventoryDb;Username=admin;Password=Password123!;"
+    "InventoryConnectionString": "REPLACED_BY_ENVIRONMENT_VARIABLE"
   },
   "RabbitMQ": {
-    "Host": "rabbitmq",
-    "UserName": "guest",
-    "Password": "guest"
-  }
+    "Host": "REPLACED_BY_ENVIRONMENT_VARIABLE",
+    "Username": "REPLACED_BY_ENVIRONMENT_VARIABLE",
+    "Password": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "Seq": {
+    "ServerUrl": "REPLACED_BY_ENVIRONMENT_VARIABLE"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  },
+  "AllowedHosts": "*"
 }
