--- a/src/ApiGateway/ApiGateway/appsettings.json
+++ b/src/ApiGateway/ApiGateway/appsettings.json
@@ -20,7 +20,8 @@
           {
             "PathPattern": "/api/{**catch-all}"
           }
-        ]
+        ],
+        "RateLimiterPolicy": "fixed-window"
       },
       "catalog-route": {
         "ClusterId": "catalog-cluster",
@@ -32,7 +33,19 @@
             "PathPattern": "/api/{**catch-all}"
           }
         ],
-        "AuthorizationPolicy": "default"
+        "RateLimiterPolicy": "sliding-window"
+      },
+      "catalog-public-route": {
+        "ClusterId": "catalog-cluster",
+        "Match": {
+          "Path": "/api/catalog/products",
+          "Methods": [ "GET" ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/api/products"
+          }
+        ]
       },
       "basket-route": {
         "ClusterId": "basket-cluster",
@@ -44,7 +57,8 @@
             "PathPattern": "/api/{**catch-all}"
           }
         ],
-        "AuthorizationPolicy": "default"
+        "AuthorizationPolicy": "default",
+        "RateLimiterPolicy": "token-bucket"
       },
       "order-route": {
         "ClusterId": "order-cluster",
@@ -56,7 +70,8 @@
             "PathPattern": "/api/{**catch-all}"
           }
         ],
-        "AuthorizationPolicy": "default"
+        "AuthorizationPolicy": "default",
+        "RateLimiterPolicy": "token-bucket"
       },
       "inventory-route": {
         "ClusterId": "inventory-cluster",
@@ -102,6 +117,17 @@
             "PathPattern": "/health"
           }
         ]
+      },
+      "identity-health": {
+        "ClusterId": "identity-cluster",
+        "Match": {
+          "Path": "/health/identity"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/health"
+          }
+        ]
       }
     },
     "Clusters": {
@@ -109,6 +135,15 @@
         "Destinations": {
           "destination1": {
             "Address": "http://identity-api"
+          }
+        },
+        "HealthCheck": {
+          "Active": {
+            "Enabled": true,
+            "Interval": "00:00:30",
+            "Timeout": "00:00:10",
+            "Policy": "ConsecutiveFailures",
+            "Path": "/health"
           }
         }
       },
@@ -164,6 +199,15 @@
         "Destinations": {
           "destination1": {
             "Address": "http://inventory-api"
+          }
+        },
+        "HealthCheck": {
+          "Active": {
+            "Enabled": true,
+            "Interval": "00:00:30",
+            "Timeout": "00:00:10",
+            "Policy": "ConsecutiveFailures",
+            "Path": "/health"
           }
         }
       }
