--- a/src/Services/Catalog/Catalog.API/Dockerfile
+++ b/src/Services/Catalog/Catalog.API/Dockerfile
@@ -3,6 +3,11 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+USER root
+RUN apt-get update && apt-get install -y libgssapi-krb5-2
+USER app
+
+
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
